SERVER-22714 MongoURI should use the socketTimeout option