src/mongo/client/mongo_uri.h
@@ -28,6 +28,7 @@
 
 #pragma once
 
+#include <map>
 #include <string>
 #include <vector>
 
@@ -67,9 +68,11 @@ namespace mongo {
  */
 class MongoURI {
 public:
+    using OptionsMap = std::map<std::string, std::string>;
+
     static StatusWith<MongoURI> parse(const std::string& url);
 
-    DBClientBase* connect(std::string& errmsg, double socketTimeout = 0) const;
+    DBClientBase* connect(std::string& errmsg) const;
 
     const std::string& getUser() const {
         return _user;
@@ -79,7 +82,7 @@ public:
         return _password;
     }
 
-    const BSONObj& getOptions() const {
+    const OptionsMap& getOptions() const {
         return _options;
     }
 
@@ -108,19 +111,19 @@ public:
     }
 
 private:
-    explicit MongoURI(const ConnectionString cs)
-        : _connectString(std::move(cs)), _user(), _password(), _database(), _options(){};
+    explicit MongoURI(const ConnectionString connectString)
+        : _connectString(std::move(connectString)){};
 
-    MongoURI(ConnectionString _connectString,
+    MongoURI(ConnectionString connectString,
              const std::string& user,
              const std::string& password,
              const std::string& database,
-             const BSONObj& options)
-        : _connectString(std::move(_connectString)),
+             OptionsMap options)
+        : _connectString(std::move(connectString)),
           _user(user),
           _password(password),
           _database(database),
-          _options(options){};
+          _options(std::move(options)){};
 
     BSONObj _makeAuthObjFromOptions(int maxWireVersion) const;
 
@@ -128,6 +131,7 @@ private:
     std::string _user;
     std::string _password;
     std::string _database;
-    BSONObj _options;
+    OptionsMap _options;
 };
+
 }  // namespace mongo
