src/mongo/shell/shell_options.cpp
@@ -26,6 +26,8 @@
  *    then also delete it in the license file.
  */
 
+#include "mongo/platform/basic.h"
+
 #include "mongo/shell/shell_options.h"
 
 #include <boost/filesystem/operations.hpp>
@@ -363,13 +365,13 @@ Status storeMongoShellOptions(const moe::Environment& params,
         } else if (!shellGlobalParams.password.empty() && !cs.getPassword().empty()) {
             sb << "password";
         } else if (!shellGlobalParams.authenticationMechanism.empty() &&
-                   uriOptions.hasField("authMechanism")) {
+                   uriOptions.count("authMechanism")) {
             sb << "the authentication mechanism";
         } else if (!shellGlobalParams.authenticationDatabase.empty() &&
-                   uriOptions.hasField("authSource")) {
+                   uriOptions.count("authSource")) {
             sb << "the authentication database";
         } else if (shellGlobalParams.gssapiServiceName != saslDefaultServiceName &&
-                   uriOptions.hasField("gssapiServiceName")) {
+                   uriOptions.count("gssapiServiceName")) {
             sb << "the GSSAPI service name";
         } else {
             return Status::OK();
